--- a/note-enchantée.html
+++ b/note-enchantée.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./public/css/style.css">
+  <link rel="stylesheet" href="./publics/css/style.css">
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
   <!-- Icon -->
   <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="/src/images/logo/ohmyfood@2x.svg" />
+  <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
  
   <title>Menu - A la française</title>
 </head>
@@ -21,7 +21,7 @@
 
     <main>
         <div class="restaurant__img">
-        <img src="/src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
+        <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
     </div>
 
     <!-- Menu header -->
