--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -15,13 +15,13 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img class="header__logo" src="/src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
 
     <main>
         <div class="restaurant__img">
-        <img src="/src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
+        <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
     </div>
 
     <!-- Menu header -->
