--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <header class="header">
-        <a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
-        <img class="header__logo" src="/src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
+        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
 
     <main>
