--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h2>Restaurants</h2>
               </div>
          <div class="cards">
-            <a href="/palette-du-gout.html">
+            <a href="./palette-du-gout.html">
                 <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
                 <span class="card__btn">Nouveau</span>
                 <div class="card__content">
@@ -62,7 +62,7 @@
                   </div>
                 
             </a>
-            <a href="/note-enchantée.html">
+            <a href="./note-enchantée.html">
                 <span class="card__btn">Nouveau</span>
                 <img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt class="card__img">
                 <div class="card__content">
@@ -75,7 +75,7 @@
                   </div>
                 
             </a>
-            <a href="/a-la-française.html">
+            <a href="./a-la-française.html">
                 <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
                 <div class="card__content">
                       <h3 class="card__title">A la française</h3>
@@ -86,7 +86,7 @@
                     </div>
                   </div>
             </a>
-            <a href="/delice-des-sens.html">
+            <a href="./delice-des-sens.html">
                 <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
                 <div class="card_content">
                       <h3 class="card__title">Le Délice des sens</h3>
