--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
   <title>Ohmyfood</title>
 </head>
 <body>
-
+  <!-- Loading -->
+  <div class="container">
+    <div class="load">
+      <div class="load__bar load__bar--1"></div>
+      <div class="load__bar load__bar--2"></div>
+      <div class="load__bar load__bar--3"></div>
+      <div class="load__bar load__bar--4"></div>
+      <div class="load__bar load__bar--5"></div>
+    </div>
+    <div class="load">
+      <div class="load__bar load__bar--1-inv"></div>
+      <div class="load__bar load__bar--2-inv"></div>
+      <div class="load__bar load__bar--3-inv"></div>
+      <div class="load__bar load__bar--4-inv"></div>
+      <div class="load__bar load__bar--5-inv"></div>
+    </div>
+  </div>
     <!-- Header -->
     <header class="header">
       <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
@@ -30,11 +46,11 @@
          <section class="reser">
         <h1 class="reser__title">Réservez le menu qui vous convient</h1>
         <p class="reser__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a class="command__btn" href="#restaurants">Explorez nos restaurants</a>
+        <a class="command__btn" href="#restaurants__title">Explorez nos restaurants</a>
          </section>
          <!-- Fonctionnement -->
          <section class="fonc">
-          <div class="container">
+          <div class="fonc__container">
             <h2>Fonctionnement</h2>
             <ol class="fonc__list">
                 <li class="fonc__lists"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
