setting loader and fonctionnement

--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
       <div class="load__bar load__bar--4"></div>
       <div class="load__bar load__bar--5"></div>
     </div>
-    <div class="load">
-      <div class="load__bar load__bar--1-inv"></div>
-      <div class="load__bar load__bar--2-inv"></div>
-      <div class="load__bar load__bar--3-inv"></div>
-      <div class="load__bar load__bar--4-inv"></div>
-      <div class="load__bar load__bar--5-inv"></div>
-    </div>
   </div>
     <!-- Header -->
     <header class="header">
@@ -117,7 +110,7 @@
         </section>
         <!-- Footer -->
     <footer>
-    <div class="container">
+    <div class="footer__container">
       <span class="footer__logo">ohmyfood</span>
         <ul class="footr__list">
             <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
