adjustment fonc__container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!-- Loading -->
-  <div class="container">
+  <!-- <div class="container">
     <div class="load">
       <div class="load__bar load__bar--1"></div>
       <div class="load__bar load__bar--2"></div>
@@ -23,7 +23,7 @@
       <div class="load__bar load__bar--4"></div>
       <div class="load__bar load__bar--5"></div>
     </div>
-  </div>
+  </div> -->
     <!-- Header -->
     <header class="header">
       <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
@@ -54,9 +54,8 @@
          </section>
          <!-- Restaurants -->
          <section class="restaurants">
-            <div id="restaurants__title">
-                <h2>Restaurants</h2>
-              </div>
+            <div class="restaurants__container">
+                <h2 class="restaurants__title">Restaurants</h2>
          <div class="cards">
             <a href="./palette-du-gout.html">
                 <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
@@ -69,7 +68,6 @@
                         <i class="fa fa-heart"></i>
                     </div>
                   </div>
-                
             </a>
             <a href="./note-enchantée.html">
                 <span class="card__btn">Nouveau</span>
@@ -82,7 +80,6 @@
                         <i class="fa fa-heart"></i>
                     </div>
                   </div>
-                
             </a>
             <a href="./a-la-française.html">
                 <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
@@ -97,7 +94,7 @@
             </a>
             <a href="./delice-des-sens.html">
                 <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
-                <div class="card_content">
+                <div class="card__content">
                       <h3 class="card__title">Le Délice des sens</h3>
                       <p class="card__loc">Folie-Méricourt</p>
                     <div class="card__heart">
@@ -107,6 +104,7 @@
                   </div>
             </a>
          </div>
+        </div>
         </section>
         <!-- Footer -->
     <footer>
