--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          <section class="reser">
         <h1 class="reser__title">Réservez le menu qui vous convient</h1>
         <p class="reser__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a class="command__btn" href="#restaurants__title">Explorez nos restaurants</a>
+        <a class="command__btn" href="#restaurants">Explorez nos restaurants</a>
          </section>
          <!-- Fonctionnement -->
          <section class="fonc">
@@ -53,7 +53,7 @@
           </div>
          </section>
          <!-- Restaurants -->
-         <section class="restaurants">
+         <section id="restaurants">
             <div class="restaurants__container">
                 <h2 class="restaurants__title">Restaurants</h2>
          <div class="cards">
