--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <div class="fonc__container">
             <h2>Fonctionnement</h2>
             <ol class="fonc__list">
-                <li class="fonc__lists"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
-                <li class="fonc__lists"><i class="fa-solid fa-list"></i>Composez votre menu</li>
-                <li class="fonc__lists"><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
+                <li class="fonc__lists" id="1"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</li>
+                <li class="fonc__lists" id="2"><i class="fa-solid fa-list"></i>Composez votre menu</li>
+                <li class="fonc__lists" id="3"><i class="fa-solid fa-store"></i>Dégustez au restaurant</li>
             </ol>
           </div>
          </section>
