--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <!-- Loading -->
-  <!-- <div class="container">
+  <div class="container">
     <div class="load">
       <div class="load__bar load__bar--1"></div>
       <div class="load__bar load__bar--2"></div>
@@ -23,7 +23,7 @@
       <div class="load__bar load__bar--4"></div>
       <div class="load__bar load__bar--5"></div>
     </div>
-  </div> -->
+  </div>
     <!-- Header -->
     <header class="header">
       <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
@@ -56,7 +56,8 @@
          <section id="restaurants">
             <div class="restaurants__container">
                 <h2 class="restaurants__title">Restaurants</h2>
-         <div class="cards">
+                <div class="cards">
+         <div class="card">
             <a href="./palette-du-gout.html">
                 <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt class="card__img">
                 <span class="card__btn">Nouveau</span>
@@ -68,7 +69,9 @@
                         <i class="fa fa-heart"></i>
                     </div>
                   </div>
-            </a>
+                </a>
+         </div>
+         <div class="card">
             <a href="./note-enchantée.html">
                 <span class="card__btn">Nouveau</span>
                 <img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt class="card__img">
@@ -81,6 +84,8 @@
                     </div>
                   </div>
             </a>
+          </div>
+          <div class="card">
             <a href="./a-la-française.html">
                 <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt class="card__img">
                 <div class="card__content">
@@ -92,6 +97,8 @@
                     </div>
                   </div>
             </a>
+          </div>
+          <div class="card">
             <a href="./delice-des-sens.html">
                 <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt class="card__img">
                 <div class="card__content">
@@ -103,13 +110,15 @@
                     </div>
                   </div>
             </a>
+          </div>
          </div>
         </div>
+      </div>
         </section>
         <!-- Footer -->
     <footer>
     <div class="footer__container">
-      <span class="footer__logo">ohmyfood</span>
+      <h4 class="footer__logo">ohmyfood</h4>
         <ul class="footr__list">
             <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
             <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
