--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -158,17 +158,18 @@
                 <div class="wrap__btn">
             <button class="command__btn">Commander</button>
         </div>
-    <footer>
-        <div class="container">
-          <span class="footer__logo">ohmyfood</span>
-            <ul class="footr__list">
-                <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                <li class="footer__lists"><a href="#">Mentions légales</a></li>
-                <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-            </ul>
-        </div>
-        </footer>
+        <footer>
+            <div class="footer__container">
+              <h4 class="footer__logo">ohmyfood</h4>
+                <ul class="footr__list">
+                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
+                    <li class="footer__lists"><a href="#">Mentions légales</a></li>
+                    <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
+                </ul>
+            </div>
+            
+            </footer>
 </main>
 </body>
 </html>
