--- a/a-la-française.html
+++ b/a-la-française.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
   <!-- Icon -->
   <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="/src/images/logo/ohmyfood@2x.svg" />
+  <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
  
   <title>Menu - A la française</title>
 </head>
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-        <div class="restaurant__img">
-        <img src="/src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
+        <div class="img">
+        <img class="img__image" src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
     </div>
 
     <!-- Menu header -->
@@ -156,7 +156,7 @@
                 </section>
                 </div>
                 <div class="wrap__btn">
-            <button class="command__btn">Commander</button>
+                    <a href="#"><button class="command__btn">Commander</button></a>
         </div>
         <footer>
             <div class="footer__container">
