--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -20,8 +20,8 @@
     </header>
 
     <main>
-        <div class="restaurant__img">
-        <img src="/src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
+        <div class="img">
+        <img class="img__image" src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="A la française"/>
     </div>
 
     <!-- Menu header -->
@@ -156,7 +156,7 @@
                 </section>
                 </div>
                 <div class="wrap__btn">
-            <button class="command__btn">Commander</button>
+                    <a href="#"><button class="command__btn">Commander</button></a>
         </div>
         <footer>
             <div class="footer__container">
