heart position and setting loader

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="card__content">
                       <h3 class="card__title">La palette du goût</h3>
                       <p class="card__loc">Ménilmontant</p>
-                    <div class="card__heart">
+                    <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fa fa-heart"></i>
                     </div>
@@ -78,7 +78,7 @@
                 <div class="card__content">
                       <h3 class="card__title">La note enchantée</h3>
                       <p class="card__loc">Charonne</p>
-                    <div class="card__heart">
+                    <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fa fa-heart"></i>
                     </div>
@@ -91,7 +91,7 @@
                 <div class="card__content">
                       <h3 class="card__title">A la française</h3>
                       <p class="card__loc">Cité rouge</p>
-                    <div class="card__heart">
+                    <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fa fa-heart"></i>
                     </div>
@@ -104,7 +104,7 @@
                 <div class="card__content">
                       <h3 class="card__title">Le Délice des sens</h3>
                       <p class="card__loc">Folie-Méricourt</p>
-                    <div class="card__heart">
+                    <div class="heart">
                         <i class="far fa-heart"></i>
                         <i class="fa fa-heart"></i>
                     </div>
