complete menus restaurants pages

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -14,8 +14,8 @@
   <title>Menu - A la française</title>
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <header>
+        <a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
 
