--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -11,24 +11,25 @@
   <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
  
-  <title>Menu - A la française</title>
+  <title>Menu - Le délice des sens</title>
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <header>
+        <a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
 
     <main>
         <div class="img">
-        <img class="img__image" src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="A la française"/>
+        <img class="img__image" src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"/>
     </div>
 
     <!-- Menu header -->
     <div class="menu__header">
-            <h1 class="restaurant__title">A la française</h1>
-            <div class="menu__heart">
+            <h1 class="menu__title">Le délice des sens</h1>
+            <div class="heart">
               <i class="far fa-heart"></i>
+              <i class="fa fa-heart"></i>
             </div>
     </div>
 
@@ -36,11 +37,11 @@
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__tilte">ENTREES</h2>
+                    <h2 class="menu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <div class="menu__price">
                             <p>25€</p>
@@ -51,8 +52,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour</p>
+                            <h3>Bouchée de homard croustillant</h3>
+                            <p>Et sa farandole de petits légumes</p>
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
@@ -63,8 +64,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
+                            <h3>Velouté de cèpes</h3>
+                            <p>Aux truffes</p>
                         </div>
                         <div class="menu__price">
                             <p>20€</p>
@@ -79,8 +80,8 @@
                     <h2 class="menu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais</p>
+                            <h3>Poulet rôti aux herbes de Provence</h3>
+                            <p>Et sa crème de truffe</p>
                         </div>
                         <div class="menu__price">
                             <p>40€</p>
@@ -91,8 +92,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
+                            <h3>Langouste rôtie</h3>
+                            <p>Et ses légumes de saison</p>
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
@@ -103,8 +104,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="card__name">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <h3>Côte de boeuf Angus</h3>
+                            <p>Et sa purée de panais</p>
                         </div>
                         <div class="menu__price">
                             <p>44€</p>
@@ -119,8 +120,8 @@
                     <h2 class="menu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes</p>
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
                         </div>
                         <div class="menu__price">
                             <p>18€</p>
@@ -131,7 +132,7 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Fondant au chocolat</h3>
+                            <h3>Crème brulée</h3>
                             <p>Revisité</p>
                         </div>
                         <div class="menu__price">
@@ -143,8 +144,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
+                            <h3>Tiramisu</h3>
+                            <p>À la noisette</p>
                         </div>
                         <div class="menu__price">
                             <p>23€</p>
