--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </div>
     <!-- Header -->
-    <header class="header">
+    <header>
       <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
     <main>
