--- a/note-enchantée.html
+++ b/note-enchantée.html
@@ -14,21 +14,22 @@
   <title>Menu - A la française</title>
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <header>
+        <a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
 
     <main>
         <div class="img">
-        <img class="img__image" src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="A la française"/>
+        <img class="img__image" src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
     </div>
 
     <!-- Menu header -->
     <div class="menu__header">
-            <h1 class="restaurant__title">A la française</h1>
-            <div class="menu__heart">
+            <h1 class="menu__title">La note enchantée</h1>
+            <div class="heart">
               <i class="far fa-heart"></i>
+              <i class="fa fa-heart"></i>
             </div>
     </div>
 
@@ -36,11 +37,11 @@
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__tilte">ENTREES</h2>
+                    <h2 class="menu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="menu__price">
                             <p>25€</p>
@@ -51,8 +52,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour</p>
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
@@ -63,11 +64,23 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Mariné aux zestes d'orange</p>
                         </div>
                         <div class="menu__price">
                             <p>20€</p>
+                        </div>
+                        <div class="menu__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__name">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>35€</p>
                         </div>
                         <div class="menu__check">
                             <i class="fas fa-check-circle"></i>
@@ -79,8 +92,8 @@
                     <h2 class="menu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais</p>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="menu__price">
                             <p>40€</p>
@@ -91,8 +104,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
@@ -103,8 +116,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="card__name">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <h3>Mijoté de queue de boeuf</h3>
+                            <p>Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="menu__price">
                             <p>44€</p>
@@ -119,8 +132,8 @@
                     <h2 class="menu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes</p>
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="menu__price">
                             <p>18€</p>
@@ -131,8 +144,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisité</p>
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
                         </div>
                         <div class="menu__price">
                             <p>22€</p>
@@ -143,8 +156,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Déstructurée</p>
                         </div>
                         <div class="menu__price">
                             <p>23€</p>
