--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -11,24 +11,25 @@
   <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
  
-  <title>Menu - A la française</title>
+  <title>Menu - La palette du goût</title>
 </head>
 <body>
-    <header class="header">
-        <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <header>
+        <a class="back"  href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
 
     <main>
         <div class="img">
-        <img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="A la française"/>
+        <img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
     </div>
 
     <!-- Menu header -->
     <div class="menu__header">
-            <h1 class="restaurant__title">A la française</h1>
-            <div class="menu__heart">
+            <h1 class="menu__title">La palette du goût</h1>
+            <div class="heart">
               <i class="far fa-heart"></i>
+              <i class="fa fa-heart"></i>
             </div>
     </div>
 
@@ -36,11 +37,11 @@
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__tilte">ENTREES</h2>
+                    <h2 class="menu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Tartare de poulpe acidulé</h3>
-                            <p>Aux zestes d'orange</p>
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
                         </div>
                         <div class="menu__price">
                             <p>25€</p>
@@ -51,8 +52,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Velouté de légumes d'antan</h3>
-                            <p>Carotte, panais, topinambour</p>
+                            <h3>Foie gras de canard mi-cuit</h3>
+                            <p>Et ses copeaux de truffe noire</p>
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
@@ -63,8 +64,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Soupe à l'oignon</h3>
-                            <p>Revisitée</p>
+                            <h3>Oeuf au plat</h3>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
                         </div>
                         <div class="menu__price">
                             <p>20€</p>
@@ -79,8 +80,8 @@
                     <h2 class="menu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Coquilles Saint-Jacques</h3>
-                            <p>Accompagnées d'une purée de panais</p>
+                            <h3>Filet de boeuf aux herbes</h3>
+                            <p>Accompagné de sa ribambelle de légumes</p>
                         </div>
                         <div class="menu__price">
                             <p>40€</p>
@@ -91,8 +92,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Magret de canard</h3>
-                            <p>Et parmentier de pommes de terre</p>
+                            <h3>Parmentier de queue de boeuf</h3>
+                            <p>À la truffe noire sur sa purée de panais</p>
                         </div>
                         <div class="menu__price">
                             <p>35€</p>
@@ -103,8 +104,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="card__name">
-                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
-                            <p>Sur son lit de gnocchis aux légumes</p>
+                            <h3>Filet de turbot</h3>
+                            <p>Aux agrumes</p>
                         </div>
                         <div class="menu__price">
                             <p>44€</p>
@@ -119,8 +120,8 @@
                     <h2 class="menu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Pétales de violettes glacés</h3>
-                            <p>Et purée de noisettes</p>
+                            <h3>Paris-Brest</h3>
+                            <p>Revisité</p>
                         </div>
                         <div class="menu__price">
                             <p>18€</p>
@@ -131,8 +132,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Fondant au chocolat</h3>
-                            <p>Revisité</p>
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p>Et glace à la vanille de Madagascar</p>
                         </div>
                         <div class="menu__price">
                             <p>22€</p>
@@ -143,8 +144,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Millefeuille croustillant</h3>
-                            <p>Myrtilles et pâte d’amande</p>
+                            <h3>Mousse au chocolat</h3>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
                         </div>
                         <div class="menu__price">
                             <p>23€</p>
