setting menu__card location and animation price and menu__check

--- a/a-la-française.html
+++ b/a-la-française.html
@@ -26,9 +26,10 @@
 
     <!-- Menu header -->
     <div class="menu__header">
-            <h1 class="restaurant__title">A la française</h1>
-            <div class="menu__heart">
+            <h1 class="menu__title">A la française</h1>
+            <div class="heart">
               <i class="far fa-heart"></i>
+              <i class="fa fa-heart"></i>
             </div>
     </div>
 
@@ -36,7 +37,7 @@
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__tilte">ENTREES</h2>
+                    <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Tartare de poulpe acidulé</h3>
@@ -76,7 +77,7 @@
             </section>
             <!-- Plats -->
         <section class="submenu">
-                    <h2 class="menu__title">PLATS</h2>
+                    <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Coquilles Saint-Jacques</h3>
@@ -102,7 +103,7 @@
                         </div>
                     </div>
                     <div class="menu__card">
-                        <div class="card__name">
+                        <div class="menu__name">
                             <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                             <p>Sur son lit de gnocchis aux légumes</p>
                         </div>
@@ -116,7 +117,7 @@
 
                     <!-- Desserts -->
                     <section class="submenu">
-                    <h2 class="menu__title">DESSERTS</h2>
+                    <h2 class="submenu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Pétales de violettes glacés</h3>
