--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -37,7 +37,7 @@
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__title">ENTREES</h2>
+                    <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Tartare de thon</h3>
@@ -77,7 +77,7 @@
             </section>
             <!-- Plats -->
         <section class="submenu">
-                    <h2 class="menu__title">PLATS</h2>
+                    <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Poulet rôti aux herbes de Provence</h3>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="menu__card">
-                        <div class="card__name">
+                        <div class="menu__name">
                             <h3>Côte de boeuf Angus</h3>
                             <p>Et sa purée de panais</p>
                         </div>
@@ -117,7 +117,7 @@
 
                     <!-- Desserts -->
                     <section class="submenu">
-                    <h2 class="menu__title">DESSERTS</h2>
+                    <h2 class="submenu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Farandole de desserts</h3>
