--- a/note-enchantée.html
+++ b/note-enchantée.html
@@ -37,7 +37,7 @@
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__title">ENTREES</h2>
+                    <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Ravioles de foie gras</h3>
@@ -89,7 +89,7 @@
             </section>
             <!-- Plats -->
         <section class="submenu">
-                    <h2 class="menu__title">PLATS</h2>
+                    <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Noix de coquilles Saint-Jacques</h3>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="menu__card">
-                        <div class="card__name">
+                        <div class="menu__name">
                             <h3>Mijoté de queue de boeuf</h3>
                             <p>Et riz sauvage aux zestes de citron</p>
                         </div>
@@ -129,7 +129,7 @@
 
                     <!-- Desserts -->
                     <section class="submenu">
-                    <h2 class="menu__title">DESSERTS</h2>
+                    <h2 class="submenu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Macaron noisette et chocolat</h3>
