--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -24,7 +24,7 @@
         <img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
     </div>
 
-    <!-- Menu header -->
+    <section class="menu__container">
     <div class="menu__header">
             <h1 class="menu__title">La palette du goût</h1>
             <div class="heart">
@@ -32,22 +32,21 @@
               <i class="fa fa-heart"></i>
             </div>
     </div>
-
             <!-- Menu -->
           <div class="submenus">
             <!-- Entrées -->
           <section class="submenu">
-                    <h2 class="menu__title">ENTREES</h2>
+                    <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Fricassée d'escargot</h3>
                             <p>Au piment d'Espelette</p>
                         </div>
                         <div class="menu__price">
-                            <p>25€</p>
+                            25€
                         </div>
                         <div class="menu__check">
-                            <i class="fas fa-check-circle"></i>
+                            <i class="fas fa-check-circle" id="elem"></i>
                         </div>
                     </div>
                     <div class="menu__card">
@@ -77,7 +76,7 @@
             </section>
             <!-- Plats -->
         <section class="submenu">
-                    <h2 class="menu__title">PLATS</h2>
+                    <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Filet de boeuf aux herbes</h3>
@@ -103,7 +102,7 @@
                         </div>
                     </div>
                     <div class="menu__card">
-                        <div class="card__name">
+                        <div class="menu__name">
                             <h3>Filet de turbot</h3>
                             <p>Aux agrumes</p>
                         </div>
@@ -117,7 +116,7 @@
 
                     <!-- Desserts -->
                     <section class="submenu">
-                    <h2 class="menu__title">DESSERTS</h2>
+                    <h2 class="submenu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Paris-Brest</h3>
@@ -171,6 +170,7 @@
             </div>
             
             </footer>
+        </section>
 </main>
 </body>
 </html>
