--- a/a-la-française.html
+++ b/a-la-française.html
@@ -24,7 +24,7 @@
         <img class="img__image" src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
     </div>
 
-    <!-- Menu header -->
+    <section class="menu__container">
     <div class="menu__header">
             <h1 class="menu__title">A la française</h1>
             <div class="heart">
@@ -157,7 +157,7 @@
                 </section>
                 </div>
                 <div class="wrap__btn">
-                    <a href="#"><button class="command__btn">Commander</button></a>
+                    <a href="#"><button class="pink__btn" id="command__btn">Commander</button></a>
         </div>
         <footer>
             <div class="footer__container">
@@ -169,8 +169,8 @@
                     <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
                 </ul>
             </div>
-            
             </footer>
+        </section>
 </main>
 </body>
 </html>
