--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 
         <!-- Reservation -->
          <section class="reser">
-        <h1 class="reser__title">Réservez le menu qui vous convient</h1>
-        <p class="reser__subtitle">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-        <a class="command__btn" href="#restaurants">Explorez nos restaurants</a>
+        <h1 class="reser__title">Réservez le menu qui
+           vous convient</h1>
+        <p class="reser__subtitle">Découvrez des restaurants d'exception,
+          sélectionnés par nos soins.</p>
+        <a class="pink__btn" href="#restaurants">Explorez nos restaurants</a>
          </section>
          <!-- Fonctionnement -->
          <section class="fonc">
