--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -156,7 +156,7 @@
                 </section>
                 </div>
                 <div class="wrap__btn">
-                    <a href="#"><button class="command__btn">Commander</button></a>
+                    <a href="#"><button class="pink__btn" id="command__btn">Commander</button></a>
         </div>
         <footer>
             <div class="footer__container">
