--- a/note-enchantée.html
+++ b/note-enchantée.html
@@ -24,7 +24,7 @@
         <img class="img__image" src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
     </div>
 
-    <!-- Menu header -->
+    <section class="menu__container">
     <div class="menu__header">
             <h1 class="menu__title">La note enchantée</h1>
             <div class="heart">
@@ -35,8 +35,8 @@
 
             <!-- Menu -->
           <div class="submenus">
-            <!-- Entrées -->
           <section class="submenu">
+             <!-- Entrées -->
                     <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
@@ -169,7 +169,7 @@
                 </section>
                 </div>
                 <div class="wrap__btn">
-                    <a href="#"><button class="command__btn">Commander</button></a>
+                    <a href="#"><button class="pink__btn" id="command__btn">Commander</button></a>
         </div>
         <footer>
             <div class="footer__container">
@@ -181,8 +181,8 @@
                     <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
                 </ul>
             </div>
-            
             </footer>
+        </section>
 </main>
 </body>
 </html>
