setting responsive tablette

--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -14,7 +14,7 @@
   <title>Menu - Le délice des sens</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <a class="back" href="./index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
@@ -113,6 +113,7 @@
                         <div class="menu__check">
                             <i class="fas fa-check-circle"></i>
                         </div>
+                    </div>
                     </section>
 
                     <!-- Desserts -->
@@ -157,7 +158,7 @@
                 </section>
                 </div>
                 <div class="wrap__btn">
-                    <a href="#"><button class="pink__btn" id="command__btn">Commander</button></a>
+                    <button class="pink__btn" id="command__btn">Commander</button>
         </div>
         <footer>
             <div class="footer__container">
