--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <img class="header__logo" src="./src/images/logo/ohmyfood.png" alt="Logo Ohmyfood"/>
     </header>
     <main>
-      <section class="local">
+      <div class="local">
         <i class="fa fa-map-marker-alt"></i>
         <span class="local__text">Paris, Belleville</span>
-      </section>
+      </div>
 
 
         <!-- Reservation -->
@@ -115,7 +115,7 @@
           </div>
          </div>
         </div>
-      </div>
+     
         </section>
         <!-- Footer -->
     <footer>
