--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <!-- Icon -->
   <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
-
+  <meta name="title" content="Ohmyfood, projet 3 OpenClassrooms ">
+  <meta name="description" content="Ohmyfood, Réservez le menu qui vous convient.
+  Découvrez des restaurants d'exception, sélectionnés par nos soins.
+  Projet 3 OpenClassrooms réalisé par Samantha Morata.">
   <title>Ohmyfood</title>
 </head>
 <body>
