setting @media and pink_button

--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./public/css/style.css">
-  <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-  <!-- Icon -->
-  <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
-  <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+  <!-- Balise meta -->
+  <title>Ohmyfood</title>
   <meta name="title" content="Ohmyfood, projet 3 OpenClassrooms ">
   <meta name="description" content="Ohmyfood, Réservez le menu qui vous convient.
   Découvrez des restaurants d'exception, sélectionnés par nos soins.
   Projet 3 OpenClassrooms réalisé par Samantha Morata.">
-  <title>Ohmyfood</title>
+  <meta name ="robots" content ="index,follow">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <!-- Icon -->
+    <script src="https://kit.fontawesome.com/9e34b21b3e.js" crossorigin="anonymous"></script>
+    
+    <link rel="icon" type="image/png" href="./src/images/logo/ohmyfood@2x.svg" />
+   <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
   <!-- Loading -->
