--- a/a-la-française.html
+++ b/a-la-française.html
@@ -163,7 +163,7 @@
         <footer>
             <div class="footer__container">
               <h4 class="footer__logo">ohmyfood</h4>
-                <ul class="footr__list">
+                <ul class="footer__list">
                     <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
                     <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
                     <li class="footer__lists"><a href="#">Mentions légales</a></li>
