--- a/a-la-française.html
+++ b/a-la-française.html
@@ -24,19 +24,17 @@
         <div class="img">
             <img class="img__image" src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française"/>
         </div>
-
-                <section class="menu__container">
-                    <div class="menu__header">
-                        <h1 class="menu__title">A la française</h1>
-                    <div class="heart">
-                        <i class="far fa-heart"></i>
-                        <i class="fa fa-heart"></i>
-                    </div>
-                    </div>
-
-                    <!-- Menu -->
-                <div class="submenus">
-                    <!-- Entrées -->
+        <div class="menu__container">
+            <div class="menu__header">
+                <h1 class="menu__title">A la française</h1>
+                <div class="heart">
+                    <i class="far fa-heart"></i>
+                    <i class="fa fa-heart"></i>
+                </div>
+            </div>
+                     <!-- Menu -->
+            <div class="submenus">
+                <!-- Entrées -->
                 <section class="submenu">
                     <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
@@ -76,7 +74,7 @@
                         </div>
                     </div>
                 </section>
-                    <!-- Plats -->
+                        <!-- Plats -->
                 <section class="submenu">
                     <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
@@ -115,11 +113,10 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-                    </section>
-
-                        <!-- Desserts -->
+                </section>
+                    <!-- Desserts -->
                 <section class="submenu">
-                    <h2 class="submenu__title">DESSERTS</h2>
+                        <h2 class="submenu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Pétales de violettes glacés</h3>
@@ -162,17 +159,29 @@
                     <button class="pink__btn" id="command__btn">Commander</button>
                 </div>
             <footer>
-            <div class="footer__container">
-              <h4 class="footer__logo">ohmyfood</h4>
-                <ul class="footer__list">
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                    <li class="footer__lists"><a href="#">Mentions légales</a></li>
-                    <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-                </ul>
-            </div>
+                <div class="footer__container">
+                    <h4 class="footer__logo">ohmyfood</h4>
+                        <ul class="footer__list">
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-utensils"></i>Proposer un restaurant
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">Mentions légales</a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="mailto:contact@ohmyfood.com">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
             </footer>
-                </section>
+        </div>
     </main>
 </body>
 </html>
