--- a/delice-des-sens.html
+++ b/delice-des-sens.html
@@ -22,59 +22,57 @@
 
     <main>
         <div class="img">
-        <img class="img__image" src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"/>
+            <img class="img__image" src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens"/>
         </div>
-
-                <section class="menu__container">
-                <div class="menu__header">
-                    <h1 class="menu__title">Le délice des sens</h1>
+        <div class="menu__container">
+            <div class="menu__header">
+                <h1 class="menu__title">Le délice des sens</h1>
                 <div class="heart">
                     <i class="far fa-heart"></i>
                     <i class="fa fa-heart"></i>
                 </div>
-                </div>
-
-            <!-- Menu -->
+            </div>
+                    <!-- Menu -->
             <div class="submenus">
-            <!-- Entrées -->
+                <!-- Entrées -->
                 <section class="submenu">
                     <h2 class="submenu__title">ENTREES</h2>
-                <div class="menu__card">
-                <div class="menu__name">
-                    <h3>Tartare de thon</h3>
-                    <p>Assaisonné au yuzu</p>
-                </div>
-                <div class="menu__price">
-                    <p>25€</p>
-                </div>
-                <div class="menu__check">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-                </div>
-                <div class="menu__card">
-                    <div class="menu__name">
-                        <h3>Bouchée de homard croustillant</h3>
-                        <p>Et sa farandole de petits légumes</p>
-                    </div>
-                    <div class="menu__price">
-                        <p>35€</p>
-                    </div>
-                    <div class="menu__check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
                     <div class="menu__card">
                         <div class="menu__name">
-                            <h3>Velouté de cèpes</h3>
-                            <p>Aux truffes</p>
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <div class="menu__price">
-                            <p>20€</p>
+                            <p>25€</p>
                         </div>
                         <div class="menu__check">
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
+                    <div class="menu__card">
+                        <div class="menu__name">
+                            <h3>Bouchée de homard croustillant</h3>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>35€</p>
+                        </div>
+                    <div class="menu__check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__name">
+                        <h3>Velouté de cèpes</h3>
+                        <p>Aux truffes</p>
+                    </div>
+                    <div class="menu__price">
+                        <p>20€</p>
+                    </div>
+                    <div class="menu__check">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
                 </section>
                 <!-- Plats -->
                 <section class="submenu">
@@ -119,19 +117,19 @@
 
                     <!-- Desserts -->
                 <section class="submenu">
-                    <h2 class="submenu__title">DESSERTS</h2>
-                <div class="menu__card">
-                    <div class="menu__name">
-                        <h3>Farandole de desserts</h3>
-                        <p>Du chef</p>
+                        <h2 class="submenu__title">DESSERTS</h2>
+                    <div class="menu__card">
+                        <div class="menu__name">
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>18€</p>
+                        </div>
+                        <div class="menu__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="menu__price">
-                        <p>18€</p>
-                    </div>
-                    <div class="menu__check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Crème brulée</h3>
@@ -158,21 +156,33 @@
                     </div>
                 </section>
             </div>
-                <div class="wrap__btn">
-                    <button class="pink__btn" id="command__btn">Commander</button>
-                </div>
-            <footer>
-            <div class="footer__container">
-              <h4 class="footer__logo">ohmyfood</h4>
-                <ul class="footr__list">
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                    <li class="footer__lists"><a href="#">Mentions légales</a></li>
-                    <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-                </ul>
+            <div class="wrap__btn">
+                <button class="pink__btn" id="command__btn">Commander</button>
             </div>
-            </footer>
-        </section>
+            <footer>
+                <div class="footer__container">
+                    <h4 class="footer__logo">ohmyfood</h4>
+                        <ul class="footer__list">
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-utensils"></i>Proposer un restaurant
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">Mentions légales</a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="mailto:contact@ohmyfood.com">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+            </footer>       
+        </div>
     </main>
 </body>
 </html>
