--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Ohmyfood, Réservez le menu qui vous convient.
   Découvrez des restaurants d'exception, sélectionnés par nos soins.
   Projet 3 OpenClassrooms réalisé par Samantha Morata.">
-  <meta name ="robots" content ="index,follow">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font -->
@@ -123,15 +122,27 @@
         <!-- Footer -->
         <footer>
           <div class="footer__container">
-            <h4 class="footer__logo">ohmyfood</h4>
-              <ul class="footer__list">
-                  <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                  <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                  <li class="footer__lists"><a href="#">Mentions légales</a></li>
-                  <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-              </ul>
-          </div>
-          </footer>
+              <h4 class="footer__logo">ohmyfood</h4>
+                  <ul class="footer__list">
+                      <li class="footer__lists">
+                          <a href="#">
+                              <i class="fa-solid fa-utensils"></i>Proposer un restaurant
+                          </a>
+                      </li>
+                      <li class="footer__lists">
+                          <a href="#">
+                              <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+                          </a>
+                      </li>
+                      <li class="footer__lists">
+                          <a href="#">Mentions légales</a>
+                      </li>
+                      <li class="footer__lists">
+                          <a href="mailto:contact@ohmyfood.com">Contact</a>
+                      </li>
+                  </ul>
+              </div>
+      </footer>
   </main>
 </body>
 </html>
