--- a/note-enchantée.html
+++ b/note-enchantée.html
@@ -22,23 +22,21 @@
 
     <main>
         <div class="img">
-        <img class="img__image" src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
+            <img class="img__image" src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée"/>
         </div>
-
-        <section class="menu__container">
+        <div class="menu__container">
             <div class="menu__header">
-                    <h1 class="menu__title">La note enchantée</h1>
+                <h1 class="menu__title">Le délice des sens</h1>
                 <div class="heart">
                     <i class="far fa-heart"></i>
                     <i class="fa fa-heart"></i>
                 </div>
             </div>
-
-            <!-- Menu -->
-          <div class="submenus">
-          <section class="submenu">
-             <!-- Entrées -->
-                    <h2 class="submenu__title">ENTREES</h2>
+                    <!-- Menu -->
+            <div class="submenus">
+                     <!-- Entrées -->
+                <section class="submenu">
+                        <h2 class="submenu__title">ENTREES</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Ravioles de foie gras</h3>
@@ -87,10 +85,10 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-            </section>
-            <!-- Plats -->
-        <section class="submenu">
-                    <h2 class="submenu__title">PLATS</h2>
+                </section>
+                <!-- Plats -->
+                <section class="submenu">
+                        <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Noix de coquilles Saint-Jacques</h3>
@@ -128,10 +126,9 @@
                         </div>
                     </div>
                     </section>
-
-                    <!-- Desserts -->
+                        <!-- Desserts -->
                     <section class="submenu">
-                    <h2 class="submenu__title">DESSERTS</h2>
+                        <h2 class="submenu__title">DESSERTS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Macaron noisette et chocolat</h3>
@@ -172,19 +169,31 @@
                 </div>
                 <div class="wrap__btn">
                     <button class="pink__btn" id="command__btn">Commander</button>
-        </div>
-        <footer>
-            <div class="footer__container">
-              <h4 class="footer__logo">ohmyfood</h4>
-                <ul class="footr__list">
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                    <li class="footer__lists"><a href="#">Mentions légales</a></li>
-                    <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-                </ul>
             </div>
+            <footer>
+                <div class="footer__container">
+                    <h4 class="footer__logo">ohmyfood</h4>
+                        <ul class="footer__list">
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-utensils"></i>Proposer un restaurant
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">Mentions légales</a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="mailto:contact@ohmyfood.com">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
             </footer>
-        </section>
+        </div>
     </main>
 </body>
 </html>
