--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -22,34 +22,33 @@
 
     <main>
         <div class="img">
-        <img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
-    </div>
-
-            <section class="menu__container">
+            <img class="img__image" src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût"/>
+        </div>
+        <div class="menu__container">
             <div class="menu__header">
                 <h1 class="menu__title">La palette du goût</h1>
-            <div class="heart">
-                <i class="far fa-heart"></i>
-                <i class="fa fa-heart"></i>
+                <div class="heart">
+                    <i class="far fa-heart"></i>
+                    <i class="fa fa-heart"></i>
+                </div>
             </div>
-            </div>
-            <!-- Menu -->
-          <div class="submenus">
-            <!-- Entrées -->
-            <section class="submenu">
-                <h2 class="submenu__title">ENTREES</h2>
-                <div class="menu__card">
-                    <div class="menu__name">
-                        <h3>Fricassée d'escargot</h3>
-                        <p>Au piment d'Espelette</p>
-                    </div>
+                <!-- Menu -->
+            <div class="submenus">
+                <!-- Entrées -->
+                <section class="submenu">
+                    <h2 class="submenu__title">ENTREES</h2>
+                    <div class="menu__card">
+                        <div class="menu__name">
+                            <h3>Fricassée d'escargot</h3>
+                            <p>Au piment d'Espelette</p>
+                        </div>
                         <div class="menu__price">
                             25€
                         </div>
                         <div class="menu__check">
                             <i class="fas fa-check-circle" id="elem"></i>
                         </div>
-                </div>
+                    </div>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Foie gras de canard mi-cuit</h3>
@@ -74,9 +73,9 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-            </section>
-            <!-- Plats -->
-            <section class="submenu">
+                </section>
+                    <!-- Plats -->
+                <section class="submenu">
                     <h2 class="submenu__title">PLATS</h2>
                     <div class="menu__card">
                         <div class="menu__name">
@@ -114,34 +113,34 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                     </div>
-            </section>
-                    <!-- Desserts -->
+                </section>
+                        <!-- Desserts -->
                 <section class="submenu">
                     <h2 class="submenu__title">DESSERTS</h2>
-                <div class="menu__card">
-                    <div class="menu__name">
-                        <h3>Paris-Brest</h3>
-                        <p>Revisité</p>
+                    <div class="menu__card">
+                        <div class="menu__name">
+                            <h3>Paris-Brest</h3>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>18€</p>
+                        </div>
+                        <div class="menu__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="menu__price">
-                        <p>18€</p>
+                    <div class="menu__card">
+                        <div class="menu__name">
+                            <h3>Macaron au chocolat d'exception</h3>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="menu__price">
+                            <p>22€</p>
+                        </div>
+                        <div class="menu__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
-                    <div class="menu__check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
-                <div class="menu__card">
-                    <div class="menu__name">
-                        <h3>Macaron au chocolat d'exception</h3>
-                        <p>Et glace à la vanille de Madagascar</p>
-                    </div>
-                    <div class="menu__price">
-                        <p>22€</p>
-                    </div>
-                    <div class="menu__check">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                </div>
                     <div class="menu__card">
                         <div class="menu__name">
                             <h3>Mousse au chocolat</h3>
@@ -156,21 +155,33 @@
                     </div>
                 </section>
             </div>
-                <div class="wrap__btn">
-                    <button class="pink__btn" id="command__btn">Commander</button>
-                </div>
-        <footer>
-            <div class="footer__container">
-              <h4 class="footer__logo">ohmyfood</h4>
-                <ul class="footr__list">
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
-                    <li class="footer__lists"><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a></li>
-                    <li class="footer__lists"><a href="#">Mentions légales</a></li>
-                    <li class="footer__lists"><a href="mailto:contact@ohmyfood.com">Contact</a></li>
-                </ul>
+            <div class="wrap__btn">
+                <button class="pink__btn" id="command__btn">Commander</button>
             </div>
+            <footer>
+                <div class="footer__container">
+                    <h4 class="footer__logo">ohmyfood</h4>
+                        <ul class="footer__list">
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-utensils"></i>Proposer un restaurant
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">
+                                    <i class="fa-solid fa-handshake-angle"></i>Devenir partenaire
+                                </a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="#">Mentions légales</a>
+                            </li>
+                            <li class="footer__lists">
+                                <a href="mailto:contact@ohmyfood.com">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
             </footer>
-        </section>
+        </div>
     </main>
 </body>
 </html>
